[package]
name = "apply-license"
edition = "2021"
version = "0.2.0"
authors = ["Andy Russell <arussell123@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Automatically apply licenses to your software"
documentation = "https://docs.rs/apply-license"
repository = "https://github.com/euclio/apply-license"
readme = "README.md"

[dependencies]
toml_edit = "0.13.4"
handlebars = "0.32"
cargo_metadata = "0.5"
structopt = "0.2"
clap = "2"
failure = "0.1"
regex = "1"
lazy_static = "1.4.0"
toml = "0.4"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
serde_json = "1"
