[package]
name = "apply-license"
edition = "2021"
version = "0.2.0"
authors = ["Andy Russell <arussell123@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Automatically apply licenses to your software"
documentation = "https://docs.rs/apply-license"
repository = "https://github.com/euclio/apply-license"
readme = "README.md"

[dependencies]
anyhow = "1.0.55"
toml_edit = "0.13.4"
handlebars = "0.32"
cargo_metadata = "0.14.2"
structopt = "0.2"
clap = "2"
regex = "1"
lazy_static = "1.4.0"
toml = "0.4"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0.4"
tempfile = "3.3.0"
